--- a/retroAPI/templates/retro/baseNavigation.html
+++ b/retroAPI/templates/retro/baseNavigation.html
@@ -4,15 +4,17 @@
   <head>
     <script src="{% static 'retro/jquery.min.js'%}"></script>
     <script src="{% static 'retro/jquery-ui.min.js'%}"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
     <!-- Charts.jsn -->
     {% block chatScripts %}{% endblock%}
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="{% static 'retro/bootstrap.min.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'retro/bootstrap.min.css' %}"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'retro/font-awesome-4.7.0/css/font-awesome.min.css' %}">
     <!-- Optional theme -->
-    <link rel="stylesheet" href="{% static 'retro/bootstrap-theme.min.css' %}" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="{% static 'retro/bootstrap-theme.min.css' %}" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
 
 
     <!-- Latest compiled and minified JavaScript -->
