--- a/retroAPI/templates/retro/login.html
+++ b/retroAPI/templates/retro/login.html
@@ -19,6 +19,7 @@
 
         $("#signup").submit(function(event){
           event.preventDefault();
+          console.log($("#signup").serialize());
           $.ajax({
             type: "POST",
             url: "/register/",
