--- a/retroAPI/templates/retro/manageTeam.html
+++ b/retroAPI/templates/retro/manageTeam.html
@@ -18,6 +18,10 @@
     $(document).ready(function(){
       updateMemberList();
       refreshUserSearch();
+
+      $("#add_member").on("click", function(){
+        console.log('clicked');
+      });
       $("table").on("click","#member_list tr td button", function(){
         $.ajax({
           type:"POST",
@@ -210,6 +214,9 @@
             <div class="card">
               <div class="card-header">
                 Members
+                <div style="float: right;">
+                  <button class="fa fa-plus btn btn-default" data-toggle="modal" data-target="#userList"></button>
+                </div>
               </div>
               <div class="card-body">
                 <table class="table table-striped table-responsive">
@@ -218,6 +225,7 @@
                   </tbody>
                 </table>
               </div>
+              
             </div>
           </div>
         </div>
@@ -229,7 +237,7 @@
       <div class="row">
         <div class="col-md-12">
           <div class="input-group input-group-lg form-group">
-            <span class="input-group-addon">@</span>
+            <span class="input-group-addon"><span class="fa fa-search"></span></span>
             <input type="search" name="member_search" class="form-control" placeholder="Add Member" id="user_search">
           </div>
         </div>
@@ -247,11 +255,38 @@
       </div>
     </div>
   </div>
-    <form action="{% url 'retro:deleteTeam' %}" method="post">
-      {% csrf_token %}
-      <input type="hidden" name="teamId" value="{{team_details.id}}">
-      <input type="submit" class="btn btn-danger" value="Delete Team"/>
-    </form>
+  <div class="row">
+    <div class="col-md-2">
+      <form action="{% url 'retro:deleteTeam' %}" method="post">
+        {% csrf_token %}
+        <input type="hidden" name="teamId" value="{{team_details.id}}">
+        <input type="submit" class="btn btn-danger" value="Delete Team"/>
+      </form>
+    </div>
+    <div class="col-md-1">
+      <button class="btn btn-info" id="add_member">Add Member</button>
+    </div>
+  </div>
+  <div class="modal fade" id="userList" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+    
   {% endif %}
 {% endblock %}
 
