--- a/retroAPI/templates/retro/baseNavigation.html
+++ b/retroAPI/templates/retro/baseNavigation.html
@@ -4,6 +4,8 @@
   <head>
     <script src="{% static 'retro/jquery.min.js'%}"></script>
     <script src="{% static 'retro/jquery-ui.min.js'%}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
     <!-- Charts.jsn -->
@@ -11,7 +13,7 @@
 
     <!-- Latest compiled and minified CSS -->
     <!-- <link rel="stylesheet" href="{% static 'retro/bootstrap.min.css' %}"> -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    
     <link rel="stylesheet" href="{% static 'retro/font-awesome-4.7.0/css/font-awesome.min.css' %}">
     <!-- Optional theme -->
     <!-- <link rel="stylesheet" href="{% static 'retro/bootstrap-theme.min.css' %}" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous"> -->
@@ -135,9 +137,28 @@
           </a>&nbsp;&nbsp;
           <a href="{% url 'retro:logout' %}" class="btn btn-info">Log Out</a>
         </div>
-        <div class="col-md-10 col-sm-7 offset-sm-3 offset-md-2">
+        <div class="col-md-10 col-sm-7 offset-sm-3 offset-md-2" style="min-width: 1000px">
           <div class="main-content">
             {% block content %}{% endblock %}
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Global Modal -->
+    <div class="modal fade" id="globalModal" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modal_title"></h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body" id="modal_body">
+            
+          </div>
+          <div class="modal-footer" id="action_buttons">
+      
           </div>
         </div>
       </div>
