--- a/retroAPI/templates/retro/manageTeam.html
+++ b/retroAPI/templates/retro/manageTeam.html
@@ -17,8 +17,19 @@
   <script type="text/javascript">
     $(document).ready(function(){
       updateMemberList();
-      refreshUserSearch();
-
+      $("#add_team_memeber").on("click", function(){
+        html = "<div class=\"row\"><div class=\"col-md-12\"><div class=\"input-group input-group-lg form-group\"><span class=\"input-group-addon\"><span class=\"fa fa-search\"></span></span><input type=\"search\" name=\"member_search\" class=\"form-control\" placeholder=\"Add Member\" id=\"user_search\"></div></div></div><div class=\"row\"><div class=\"col-md-12\"><div id=\"search_results\"><table class=\"table table table-striped\" id=\"search_results_table\"><tbody id=\"search_results_list\"></tbody></table></div></div></div>";
+        $("#modal_body").html(html);
+        $("#modal_title").html("User Search");
+        $("#user_search").on('input', function(){
+          refreshUserSearch();
+        });
+        $("table").on("click","#search_results_list tr td button", function(){
+          addMemeber($(this).attr("id"));
+        });
+        $("#globalModal").modal("show");
+        // refreshUserSearch();
+      });
       $("#add_member").on("click", function(){
         console.log('clicked');
       });
@@ -87,7 +98,7 @@
           success: function(data){
             var html = ""
             for(var index in data.members){
-              html += "<tr><td>"+data.members[index].username+"</td><td><a href=\"mailto:"+data.members[index].email+"\">"+data.members[index].email+"</a></td><td><button id=\""+data.members[index].id+"\" class=\"btn btn-danger\"><span class=\"fa fa-times\"></span></button></td></tr>";
+              html += "<tr><td>"+data.members[index].first_name +" "+ data.members[index].last_name+"</td><td>"+data.members[index].username+"</td><td><a href=\"mailto:"+data.members[index].email+"\"><i>"+data.members[index].email+"</i></a></td><td style=\"width: 50px\"><button id=\""+data.members[index].id+"\" class=\"btn btn-danger\"><span class=\"fa fa-times\"></span></button></td></tr>";
             }
             $("#member_list").html(html);
           },
@@ -122,9 +133,7 @@
         });
       }
 
-      $("#user_search").on('input', function(){
-        refreshUserSearch();
-      });
+
       
 
       function getCookie(name) {
@@ -143,11 +152,11 @@
         return cookieValue;
       }
 
-      $("table").on("click","#search_results_list tr td button", function(){
+      function addMemeber(id){
         $.ajax({
           type: "POST", 
           url: "/add/teamMember/",
-          data: "userId="+$(this).attr("id")+"&teamId={{team_details.id}}",
+          data: "userId="+id+"&teamId={{team_details.id}}",
           beforeSend: function(xhr, settings) {
             function getCookie(name) {
               var cookieValue = null;
@@ -181,45 +190,26 @@
             refreshUserSearch();
           }
         });
-      });
+      }
+      
     });
   </script>
 {% endblock%}
 {% block content%}
   {% if team_details %}
   <div class="row">
-    <div class="col-md-5">
-      <form method="post" id="team_data">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="form-group">
-              <label for="name">Team Name</label>
-              <input type="text" name="name" class="form-control">
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="form-group">
-              <label for="description">Team Description</label>
-              <textarea name="description" class="form-control">
-                
-              </textarea>
-            </div>
-          </div>
-        </div>
-      </form>
+    <div class="col-md-12">
       <div class="row">
           <div class="col-md-12">
             <div class="card">
               <div class="card-header">
                 Members
                 <div style="float: right;">
-                  <button class="fa fa-plus btn btn-default" data-toggle="modal" data-target="#userList"></button>
+                  <button class="fa fa-plus btn btn-default" id="add_team_memeber"></button>
                 </div>
               </div>
               <div class="card-body">
-                <table class="table table-striped table-responsive">
+                <table class="table">
                   <tbody id="member_list">
                    
                   </tbody>
@@ -230,30 +220,6 @@
           </div>
         </div>
     </div>
-    <div class="col-md-1">
-      
-    </div>
-    <div class="col-md-6">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="input-group input-group-lg form-group">
-            <span class="input-group-addon"><span class="fa fa-search"></span></span>
-            <input type="search" name="member_search" class="form-control" placeholder="Add Member" id="user_search">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div id="search_results">
-            <table class="table table table-striped" id="search_results_table">
-              <tbody id="search_results_list">
-                
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
   <div class="row">
     <div class="col-md-2">
@@ -263,30 +229,7 @@
         <input type="submit" class="btn btn-danger" value="Delete Team"/>
       </form>
     </div>
-    <div class="col-md-1">
-      <button class="btn btn-info" id="add_member">Add Member</button>
-    </div>
   </div>
-  <div class="modal fade" id="userList" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
-    
   {% endif %}
 {% endblock %}
 
