--- a/retroAPI/templates/retro/retroDetails.html
+++ b/retroAPI/templates/retro/retroDetails.html
@@ -1,5 +1,5 @@
 {% extends 'retro/baseNavigation.html' %}
-
+{% load static %}
 {% block pageTitle %}
   {% if retro_details %}
     {{retro_details.title}}
@@ -11,37 +11,62 @@
 {% endblock %}
 
 {% block content %}
-
+  <!-- <div class="row" style="border-bottom: 1px solid #f2f2f2; margin">
+    <div class="col-sm-3" style="margin-bottom: 10px;"> 
+      <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+    </div>
+    <div class="col-sm-3"> 
+      <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+    </div>
+    <div class="col-sm-3"> 
+      <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+    </div>
+    <div class="col-sm-3"> 
+      <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+    </div>
+  </div> -->
   <div class="row">
-    <div class="col-md-12">
-      {% if retro_items %}
-      <table class="table table-striped">
-        <thead>
+    <div class="col-sm-9">
+      <div class="row">
+        <div class="col-md-12">
+          {% if retro_items %}
+          <table class="table table-striped" style="margin-top: 5px;">
+            <thead>
 
-        </thead>
-        <tbody>
-          {% for item in retro_items %}
-          <tr>
-            <td align><a href="{% url 'retro:editRetroItem' item.id %}" class="btn btn-link"><span class="fa fa-edit"></span></a>&nbsp;&nbsp;{{item.category}}</td>
-            <td>{{item.title}}</td>
+            </thead>
+            <tbody>
+              {% for item in retro_items %}
+              <tr>
+                <td align><a href="{% url 'retro:editRetroItem' item.id %}" class="btn btn-link"><span class="fa fa-edit"></span></a>&nbsp;&nbsp;{{item.category}}</td>
+                <td>{{item.title}}</td>
 
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      {% else %}
-      <div class="alert alert-warning">
-        <p>Please add a retro item</p>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+          {% else %}
+          <div class="alert alert-warning">
+            <p>Please add a retro item</p>
+          </div>
+          {% endif %}
+        </div>
       </div>
-      {% endif %}
+      <div class="row">
+        <div class="col-md-3">
+          {% if retro_details %}
+          <a href="{% url 'retro:newRetroItem' retro_details.id %}" class="btn btn-success"><span class="fa fa-plus"></span></a>
+          {% endif %}
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-3">
+      <div class="row">
+        <div class="col-sm-12">
+          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+        </div>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-3">
-      {% if retro_details %}
-      <a href="{% url 'retro:newRetroItem' retro_details.id %}" class="btn btn-success"><span class="fa fa-plus"></span></a>
-      {% endif %}
-    </div>
-  </div>
+  
 {% endblock %}
 { % endblock % }
