--- a/retroAPI/templates/retro/login.html
+++ b/retroAPI/templates/retro/login.html
@@ -14,8 +14,7 @@
     <script type="text/javascript">
       $(document).ready(function(){
         $(".login").delay(250).fadeIn();
-        $(".signup").delay(1000).fadeIn()
-        $(".content").delay(250).fadeIn();
+        $(".signup").delay(250).fadeIn()
 
         $("#signup").submit(function(event){
           event.preventDefault();
@@ -116,7 +115,7 @@
                 <div class="form-group">
                   <input type="submit" name="submitBtn" value="Log In" class="btn btn-info" id="loginBtn">
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                  <a href="../ForgotPassword/index.html" class="freeText">Forgot Password?</a>
+                  <a href="../ForgotPassword/index.html" class="freeText" style="color: white">Forgot Password?</a>
                 </div>
               </form>
             </div>
