--- a/retroAPI/templates/retro/retroDetails.html
+++ b/retroAPI/templates/retro/retroDetails.html
@@ -10,54 +10,43 @@
 
 {% endblock %}
 
-{% block chatScripts %}
-  <script type="text/javascript">
-  $(document).ready(function(){
-    function resizeDiv() {
-      vpw = $(window).width();
-      vph = $(window).height();
-      $("#image_column").css({"height": vph + "px"});
-      
-    }
-     resizeDiv();
-  });
-   
-  </script>
-{% endblock%}
 {% block content %}
-  <!-- <div class="row" style="border-bottom: 1px solid #f2f2f2; margin">
-    <div class="col-sm-3" style="margin-bottom: 10px;"> 
-      <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-    </div>
-    <div class="col-sm-3"> 
-      <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-    </div>
-    <div class="col-sm-3"> 
-      <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-    </div>
-    <div class="col-sm-3"> 
-      <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-    </div>
-  </div> -->
   <div class="row">
     <div class="col-sm-9">
       <div class="row">
         <div class="col-md-12">
           {% if retro_items %}
-          <table class="table table-striped" style="margin-top: 5px;">
-            <thead>
-
-            </thead>
-            <tbody>
-              {% for item in retro_items %}
-              <tr>
-                <td align><a href="{% url 'retro:editRetroItem' item.id %}" class="btn btn-link"><span class="fa fa-edit"></span></a>&nbsp;&nbsp;{{item.category}}</td>
-                <td>{{item.title}}</td>
-
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
+          <!-- <div class="card">
+            <div class="card-header">
+              Retro Items
+            </div>
+            <div class="card-body"> -->
+              <table class="table">
+                <thead class="thead-light">
+                  <tr>
+                    <th scope="col">
+                      Edit
+                    </th>
+                    <th scope="col">
+                      Description
+                    </th>
+                    <th scope="col">
+                      Category
+                    </th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for item in retro_items %}
+                  <tr>
+                    <td style="width: 30px;"><a href="{% url 'retro:editRetroItem' item.id %}" class="btn btn-link"><span class="fa fa-edit"></span></a></td>
+                    <td>{{item.title}}</td>
+                    <td align>{{item.category}}</td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+            <!-- </div>
+          </div> -->
           {% else %}
           <div class="alert alert-warning">
             <p>Please add a retro item</p>
@@ -68,72 +57,46 @@
       <div class="row">
         <div class="col-md-3">
           {% if retro_details %}
-          <a href="{% url 'retro:newRetroItem' retro_details.id %}" class="btn btn-success"><span class="fa fa-plus"></span></a>
+          <a href="{% url 'retro:newRetroItem' retro_details.id %}" class="btn btn-primary"><span class="fa fa-plus"></span></a>
           {% endif %}
         </div>
       </div>
     </div>
-    <div class="col-sm-3" id="image_column" style="border-left: 1px solid #dfdfdf; overflow-y: scroll;">
-      <div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+    <div class="col-sm-3" id="image_column" style="border-left: 1px solid #dfdfdf;">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
+        <a href="#" class="navbar-brand">Images</a>
+        <button class="btn btn-primary"><span class="fa fa-plus"></span></button>
+      </nav>
+      <div style="overflow-y: scroll; height: 800px">
+        <div class="row" style="margin-top: 15px;">
+          <div class="col-sm-12">
+            <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+        <div class="row" style="margin-top: 15px;">
+          <div class="col-sm-12">
+            <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+          </div>
         </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+        <div class="row" style="margin-top: 15px;">
+          <div class="col-sm-12">
+            <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+          </div>
         </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+        <div class="row" style="margin-top: 15px;">
+          <div class="col-sm-12">
+            <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+          </div>
         </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+        <div class="row" style="margin-top: 15px;">
+          <div class="col-sm-12">
+            <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+          </div>
         </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-        </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-        </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-        </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-        </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-        </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-        </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-        </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-        </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
-        </div>
-      </div><div class="row">
-        <div class="col-sm-12">
-          <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+        <div class="row" style="margin-top: 15px;">
+          <div class="col-sm-12">
+            <img src="{% static 'retro/images/New-York-City.jpg'%}"" alt="..." class="img-thumbnail" style="height: 200px; width: 100%;">
+          </div>
         </div>
       </div>
     </div>
