--- a/Retro/retroAPI/templates/retro/login.html
+++ b/Retro/retroAPI/templates/retro/login.html
@@ -97,8 +97,8 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-4 offset-md-4">
-          <div class="card login" >
+        <div class="col-md-4 offset-md-4" align="center">
+          <div class="card login" style="max-width: 21em;">
             <div class="bg"></div>
             <div class="card-body">
               <h4 class="card-title">Metro Retro</h4>
@@ -112,7 +112,7 @@
                   <span class="input-group-addon" id="basic-addon1"><span class="fa fa-lock"></span></span>
                   <input type="password" name="password" class="form-control" placeholder="Enter Password">
                 </div>
-                <div class="form-group">
+                <div class="form-group" align="left">
                   <input type="submit" name="submitBtn" value="Log In" class="btn btn-info" id="loginBtn">
                   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                   <a href="../ForgotPassword/index.html" class="freeText" style="color: white">Forgot Password?</a>
@@ -123,8 +123,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 offset-md-4">
-          <div class="card signup">
+        <div class="col-md-4 offset-md-4" align="center">
+          <div class="card signup" style="max-width: 21em;">
             <div class="card-body">
               <button data-target="#exampleModal" data-toggle="modal" type="button" class="btn btn-info btn-md btn-block">Sign Up</button>
             </div>
